k8s/mysql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy: {}
  template:
    metadata:
      labels:
        app: mysql
    spec: 
      volumes:
      - name: mysql-vol
        persistentVolumeClaim:
          claimName: mysql-pv-claim
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: mysql-vol
